Added Description to cards

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <div class="card-body">
                 <h5 class="card-title">Community</h5>
                 <img src="/images/community.jpg" class="img-fluid rounded mb-2" alt="Community">
-                <p> See what's happening around your neighborhood</p>
+                <p> See what's happening around your neighborhood.</p>
               </div>
             </div>
           </div>
@@ -139,7 +139,7 @@
               <div class="card-body">
                 <h5 class="card-title">Housing</h5>
                 <img src="/images/housing.jpg" class="img-fluid rounded mb-2" alt="Housing">
-                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                <p> Looking for a place to live? You've come to the right place. </p>
               </div>
             </div>
           </div>
@@ -148,7 +148,7 @@
               <div class="card-body">
                 <h5 class="card-title">Jobs</h5>
                 <img src="/images/jobs.jpg" class="img-fluid rounded mb-2" alt="Jobs">
-                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                <p> Find your dream job here. Many opportunities await you.</p>
               </div>
             </div>
           </div>    
@@ -157,7 +157,7 @@
               <div class="card-body">
                 <h5 class="card-title">Services</h5>
                 <img src="/images/services.jpg" class="img-fluid rounded mb-2" alt="Services">
-                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                <p> Need help with something? Check out the services offered by our community.</p>
               </div>
             </div>
           </div> 
@@ -166,7 +166,7 @@
               <div class="card-body">
                 <h5 class="card-title">Sales</h5>
                 <img src="/images/sales.jpg" class="img-fluid rounded mb-2" alt="Sales">
-                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                <p> Discover great deals on items for sale in your area. Find what you need at a price you love.</p>
               </div>
             </div>
           </div> 
@@ -175,7 +175,7 @@
               <div class="card-body">
                 <h5 class="card-title">Discussions</h5>
                 <img src="/images/discussions.jpg" class="img-fluid rounded mb-2" alt="Discussions">
-                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                <p> Join the conversation! Engage with others in your community on various topics.</p>
               </div>
             </div>
           </div> 
@@ -184,7 +184,7 @@
               <div class="card-body">
                 <h5 class="card-title">Resume</h5>
                 <img src="/images/resume.jpg" class="img-fluid rounded mb-2" alt="Resume">
-                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                <p> Create or update your resume to showcase your skills and experience. Get noticed by potential employers.</p>
               </div>
             </div>
           </div> 
@@ -193,7 +193,7 @@
               <div class="card-body">
                 <h5 class="card-title">Gigs</h5>
                 <img src="/images/gigs.jpg" class="img-fluid rounded mb-2" alt="Gigs">
-                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                <p>Whether you're looking for short-term work or freelance projects, find gigs that match your skills.</p>
               </div>
             </div>
           </div> 
@@ -294,7 +294,7 @@
           <li><a href="#" class="footer-link">find/post jobs</a></li>
         </ul>
         <button class="btn btn-danger background-white mt-3 text-dark">Subscribe</button>
-        <h1 class="display-4 fw-bold mt-3" style="color: #eedf77;">CL</h1>
+        <h1 class="display-4 fw-bold mt-3 footer-link" >CL</h1>
       </div>
 
     </div>
