--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
   </div>
 </div>
 <!-- Mobile POST button-->
-<div class="container-fluid d-block d-lg-none mt-2 px-3 text-end">
+<!--div class="container-fluid d-block d-lg-none mt-2 px-3 text-end">
    <a href="#" class="btn btn-danger transparent-btn  text-dark px-5">POST</a>
-</div>
+</div-->
       
  <main class="container-fluid py-4">
     <div class="row g-4">
@@ -301,6 +301,11 @@
     </div>
   </div>
 </footer>
+<!-- Mobile POST button-->
+<div id ="mobile-post-btn" class="d-block d-lg-none px-3 text-end">
+   <a href="#" class="btn btn-danger transparent-btn  text-dark px-5">POST</a>
+</div>
+      
 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
