--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Gloock&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/cfbe0d3908.js" crossorigin="anonymous" defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
+    <script src="scripts/scripts.js" defer></script>
 </head>
 <body>
 
@@ -302,12 +304,14 @@
   </div>
 </footer>
 <!-- Mobile POST button-->
-<div id ="mobile-post-btn" class="d-block d-lg-none px-3 text-end">
-   <a href="#" class="btn btn-danger transparent-btn  text-dark px-5">POST</a>
+
+<div class="d-block d-lg-none px-3">
+    <a href="#" id ="mobile-post-btn"  class="btn btn-danger transparent-btn  text-dark px-5">POST</a>
 </div>
       
 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+ 
 </body>
 </html>
