--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Gloock&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/cfbe0d3908.js" crossorigin="anonymous" defer></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
     <script src="scripts/scripts.js" defer></script>
 </head>
 <body>
@@ -56,7 +55,7 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link active" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -126,82 +125,68 @@
 
       <!-- Cards -->
       <section class="col-12 col-lg-7">
-        <div class="row g-4">
+          
+        <div class="form-container border shadow-sm p-5 rounded">
+            <form>
+              <h2 class="text-start mb-4">Contact Form</h2> 
+              <!-- Name -->
+              <div class="row mb-3">
+                  <label class="form-label">Name</label>
+                  <div class="col-md-6 mb-2 mb-md-0">
+                    <input type="text" class="form-control" placeholder="First" required>
+                  </div>
+                  <div class="col-md-6">
+                    <input type="text" class="form-control" placeholder="Last" required>
+                  </div>
+              </div>
 
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card border ">
-              <div class="card-body">
-                <h5 class="card-title">Community</h5>
-                <img src="/images/community.jpg" class="img-fluid rounded mb-2" alt="Community">
-                <p> See what's happening around your neighborhood.</p>
+              <!-- Email -->
+              <div class="mb-3">
+                  <label for="email" class="form-label">Email<span class="text-danger">*</span></label>
+                  <input type="email" class="form-control" id="email" required>
               </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card border">
-              <div class="card-body">
-                <h5 class="card-title">Housing</h5>
-                <img src="/images/housing.jpg" class="img-fluid rounded mb-2" alt="Housing">
-                <p> Looking for a place to live? You've come to the right place. </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card border">
-              <div class="card-body">
-                <h5 class="card-title">Jobs</h5>
-                <img src="/images/jobs.jpg" class="img-fluid rounded mb-2" alt="Jobs">
-                <p> Find your dream job here. Many opportunities await you.</p>
-              </div>
-            </div>
-          </div>    
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card border">
-              <div class="card-body">
-                <h5 class="card-title">Services</h5>
-                <img src="/images/services.jpg" class="img-fluid rounded mb-2" alt="Services">
-                <p> Need help with something? Check out the services offered by our community.</p>
-              </div>
-            </div>
-          </div> 
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card border">
-              <div class="card-body">
-                <h5 class="card-title">Sales</h5>
-                <img src="/images/sales.jpg" class="img-fluid rounded mb-2" alt="Sales">
-                <p> Discover great deals on items for sale in your area. Find what you need at a price you love.</p>
-              </div>
-            </div>
-          </div> 
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card border">
-              <div class="card-body">
-                <h5 class="card-title">Discussions</h5>
-                <img src="/images/discussions.jpg" class="img-fluid rounded mb-2" alt="Discussions">
-                <p> Join the conversation! Engage with others in your community on various topics.</p>
-              </div>
-            </div>
-          </div> 
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card border">
-              <div class="card-body">
-                <h5 class="card-title">Resume</h5>
-                <img src="/images/resume.jpg" class="img-fluid rounded mb-2" alt="Resume">
-                <p> Create or update your resume to showcase your skills and experience. Get noticed by potential employers.</p>
-              </div>
-            </div>
-          </div> 
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card border">
-              <div class="card-body">
-                <h5 class="card-title">Gigs</h5>
-                <img src="/images/gigs.jpg" class="img-fluid rounded mb-2" alt="Gigs">
-                <p>Whether you're looking for short-term work or freelance projects, find gigs that match your skills.</p>
-              </div>
-            </div>
-          </div> 
 
-        </div>
+              <!-- Country -->
+              <div class="mb-3">
+                  <label for="country" class="form-label">Country</label>
+                  <select id="country" class="form-select" required>
+                    <option value="">Please Select Country</option>
+                    <option>United States</option>
+                    <option>Canada</option>
+                    <option>United Kingdom</option>
+                    <option>Australia</option>
+                    <option>Germany</option>
+                    <option>France</option>
+                    <option>India</option>
+                    <option>Nigeria</option>
+                    <option>South Africa</option>
+                  </select>
+              </div>
+
+              <!-- City and State -->
+              <div class="row mb-3">
+                  <div class="col-md-6 mb-2 mb-md-0">
+                    <label class="form-label">City</label>
+                    <input type="text" class="form-control" required>
+                  </div>
+                  <div class="col-md-6">
+                    <label class="form-label">State</label>
+                    <input type="text" class="form-control" required>
+                  </div>
+              </div>
+
+              <!-- Message -->
+              <div class="mb-4">
+                  <label for="message" class="form-label">Message</label>
+                  <textarea class="form-control" id="message" rows="4" required></textarea>
+              </div>
+
+              <!-- Submit Button -->
+              <div class="text-start">
+                  <a href="#" class="btn btn-danger transparent-btn px-4 py-2 text-dark">SUBMIT</a>
+              </div>
+            </form>
+          </div>
       </section>
 
       <!-- Locations -->
@@ -303,12 +288,6 @@
     </div>
   </div>
 </footer>
-<!-- Mobile POST button-->
-
-<div class="d-block d-lg-none px-3">
-    <a href="#" id ="mobile-post-btn"  class="btn btn-danger transparent-btn  text-dark px-5">POST</a>
-</div>
-      
 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
