--- a/contact.html
+++ b/contact.html
@@ -44,12 +44,12 @@
       </div>
 
       <!-- Nav Links -->
-      <ul class="navbar-nav ms-auto">
+      <ul id="top-bar-nav" class="navbar-nav ms-auto">
         <!--li class="nav-item me-2">
            <a href="#" class="btn btn-danger transparent-btn  text-dark px-5">POST</a>
         </li-->
         <li class="nav-item">
-          <a class="nav-link" href="#">Account</a>
+          <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Account</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -82,7 +82,7 @@
       <aside class="col-12 col-lg-3 ">
 
          <div class="row"> 
-          <div class="col-12">
+          <div class="col-sm-12 col-md-6 mx-auto col-lg-12">
                 <h2 class="text-center">Event Calendar</h2>
                 <iframe 
                     width="100%"
@@ -230,64 +230,130 @@
     </div>
   </main>
 
+  <footer class="bg-dark text-white py-5">
+    <div class="container">
+      <div class="row gy-4 text-center text-md-start">
 
-
-<footer class="bg-dark text-white py-5">
-  <div class="container">
-    <div class="row gy-4 text-center text-md-start">
-
-      <!-- Column 1 -->
-      <div class="col-12 col-sm-6 col-md-3">
-        <h6 class="text-uppercase">craig newmark philanthropies</h6>
-        <ul class="list-unstyled">
-          <li><a href="#" class="footer-link">craigslist charitable</a></li>
-        </ul>
-        <p class="mt-3 mb-2">Follow us</p>
-        <div class="d-flex gap-3 justify-content-center justify-content-md-start">
-          <a href="#" class="footer-icon"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="footer-icon"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="footer-icon"><i class="fab fa-youtube"></i></a>
-          <a href="#" class="footer-icon"><i class="fab fa-linkedin-in"></i></a>
+        <!-- Column 1 -->
+        <div class="col-12 col-sm-6 col-md-3">
+          <h6 class="text-uppercase">craig newmark philanthropies</h6>
+          <ul class="list-unstyled">
+            <li><a href="#" class="footer-link">craigslist charitable</a></li>
+          </ul>
+          <p class="mt-3 mb-2">Follow us</p>
+          <div class="d-flex gap-3 justify-content-center justify-content-md-start">
+            <a href="#" class="footer-icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="footer-icon"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="footer-icon"><i class="fab fa-youtube"></i></a>
+            <a href="#" class="footer-icon"><i class="fab fa-linkedin-in"></i></a>
+          </div>
         </div>
-      </div>
 
-      <!-- Column 2 -->
-      <div class="col-12 col-sm-6 col-md-3">
-        <h6 class="text-uppercase">about craigslist</h6>
-        <ul class="list-unstyled">
-          <li><a href="#" class="footer-link">best-of-craigslist</a></li>
-          <li><a href="#" class="footer-link">craigslist is hiring</a></li>
-          <li><a href="#" class="footer-link">what’s new</a></li>
-          <li><a href="#" class="footer-link">system status</a></li>
-        </ul>
-      </div>
+        <!-- Column 2 -->
+        <div class="col-12 col-sm-6 col-md-3">
+          <h6 class="text-uppercase">about craigslist</h6>
+          <ul class="list-unstyled">
+            <li><a href="#" class="footer-link">best-of-craigslist</a></li>
+            <li><a href="#" class="footer-link">craigslist is hiring</a></li>
+            <li><a href="#" class="footer-link">what’s new</a></li>
+            <li><a href="#" class="footer-link">system status</a></li>
+          </ul>
+        </div>
 
-      <!-- Column 3 -->
-      <div class="col-12 col-sm-6 col-md-3">
-        <h6 class="text-uppercase">help</h6>
-        <ul class="list-unstyled">
-          <li><a href="#" class="footer-link">faq</a></li>
-          <li><a href="#" class="footer-link">abuse</a></li>
-          <li><a href="#" class="footer-link">legal</a></li>
-          <li><a href="#" class="footer-link">avoid scams & fraud</a></li>
-          <li><a href="#" class="footer-link">personal safety tips</a></li>
-        </ul>
-      </div>
+        <!-- Column 3 -->
+        <div class="col-12 col-sm-6 col-md-3">
+          <h6 class="text-uppercase">help</h6>
+          <ul class="list-unstyled">
+            <li><a href="#" class="footer-link">faq</a></li>
+            <li><a href="#" class="footer-link">abuse</a></li>
+            <li><a href="#" class="footer-link">legal</a></li>
+            <li><a href="#" class="footer-link">avoid scams & fraud</a></li>
+            <li><a href="#" class="footer-link">personal safety tips</a></li>
+          </ul>
+        </div>
 
-      <!-- Column 4 -->
-      <div class="col-12 col-sm-6 col-md-3 text-md-end">
-        <ul class="list-unstyled">
-          <li><a href="#" class="footer-link">site map</a></li>
-          <li><a href="#" class="footer-link">place an ad</a></li>
-          <li><a href="#" class="footer-link">find/post jobs</a></li>
-        </ul>
-        <button class="btn btn-danger background-white mt-3 text-dark">Subscribe</button>
-        <h1 class="display-4 fw-bold mt-3 footer-link" >CL</h1>
-      </div>
+        <!-- Column 4 -->
+        <div class="col-12 col-sm-6 col-md-3 text-md-end">
+          <ul class="list-unstyled">
+            <li><a href="#" class="footer-link">site map</a></li>
+            <li><a href="#" class="footer-link">place an ad</a></li>
+            <li><a href="#" class="footer-link">find/post jobs</a></li>
+          </ul>
+          <button class="btn btn-danger background-white mt-3 text-dark">Subscribe</button>
+          <h1 class="display-4 fw-bold mt-3 footer-link" >CL</h1>
+        </div>
 
+      </div>
+    </div>
+  </footer>
+
+  <!-- Off-Canvas Form -->
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasRightLabel">Account</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div class="form-box border">
+          <!-- Nav Tabs -->
+          <ul class="nav nav-tabs mb-4" id="formTabs" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link active" id="signin-tab" data-bs-toggle="tab" data-bs-target="#signin" type="button" role="tab">Sign In</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="signup-tab" data-bs-toggle="tab" data-bs-target="#signup" type="button" role="tab">Sign Up</button>
+            </li>
+          </ul>
+
+          <!-- Tab Content -->
+          <div class="tab-content" id="formTabsContent">
+            <!-- Sign In Form -->
+            <div class="tab-pane fade show active" id="signin" role="tabpanel">
+              <form>
+                <div class="mb-3">
+                  <label for="signinEmail" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="signinEmail" required>
+                </div>
+                <div class="mb-3">
+                  <label for="signinPassword" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="signinPassword" required>
+                </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="rememberMe">
+                  <label class="form-check-label" for="rememberMe">Remember Me</label>
+                </div>
+                <button type="submit" class="btn btn-danger transparent-btn mt-3 text-dark w-100">Sign In</button>
+              </form>
+            </div>
+
+            <!-- Sign Up Form -->
+            <div class="tab-pane fade" id="signup" role="tabpanel">
+              <form>
+                <div class="mb-3">
+                  <label for="signupName" class="form-label">Full Name</label>
+                  <input type="text" class="form-control" id="signupName" required>
+                </div>
+                <div class="mb-3">
+                  <label for="signupEmail" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="signupEmail" required>
+                </div>
+                <div class="mb-3">
+                  <label for="signupPassword" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="signupPassword" required>
+                </div>
+                <div class="mb-3">
+                  <label for="signupConfirmPassword" class="form-label">Confirm Password</label>
+                  <input type="password" class="form-control" id="signupConfirmPassword" required>
+                </div>
+                <button type="submit" class="btn btn-danger transparent-btn mt-3 text-dark w-100">Sign Up</button>
+
+              </form>
+      </div>
+  </div>
+</div>
+        
     </div>
   </div>
-</footer>
 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
