--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
           <aside class="col-12 col-lg-3 ">
 
             <div class="row"> 
-              <div class="col-12">
-                    <h2 class="text-center">Event Calendar</h2>
-                    <iframe 
+              <div class="col-sm-12 col-md-6 mx-auto col-lg-12">
+                  <h2 class="text-center">Event Calendar</h2>
+                  <iframe 
                         width="100%"
                         aspect-ratio= 16/9;
                         src="https://calendar.google.com/calendar/embed?src=945c266efb035da8c7c0f3b738d93e40b46b03c197a2fa9d2d16b9f2c9e3e4c8%40group.calendar.google.com&ctz=America%2FNew_York" 
@@ -94,6 +94,7 @@
                         frameborder="0" 
                         scrolling="no">
                   </iframe>
+
                   <hr/>
               </div>    
               <h5 class="d-none d-lg-block">Featured Near By Events</h5> 
@@ -310,7 +311,6 @@
     </div>
           
     <!-- Off-Canvas Form -->
-
    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
       <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasRightLabel">Account</h5>
