change navigation menu

--- a/housing.html
+++ b/housing.html
@@ -49,6 +49,27 @@
             <!--li class="nav-item me-2">
               <a href="#" class="btn btn-danger transparent-btn  text-dark px-5">POST</a>
             </li-->
+            <li class="d-block d-lg-none nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="d-block d-lg-none nav-item">
+              <a class="nav-link" href="#">Community</a>
+            </li>
+            <li class="d-block d-lg-none nav-item">
+              <a class="nav-link" href="#">For Sale</a>
+            </li>
+            <li class="d-block d-lg-none nav-item">
+              <a class="nav-link" href="#">Gigs</a>
+            </li>
+            <li class="d-block d-lg-none nav-item">
+              <a class="nav-link" href="housing.html">Housing</a>
+            </li>
+            <li class="d-block d-lg-none nav-item">
+              <a class="nav-link" href="#">Jobs</a>
+            </li>
+            <li class="d-block d-lg-none nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Account</a>
             </li>
@@ -80,7 +101,7 @@
     
     <!---- Breadcrumbs -->
     <nav class="nav-breadcrumbs">
-      <ul class="d-flex list-unstyled w-100 pt-3 pb-2 gap-2  breadcrumbs mx-4">
+      <ul class="d-none d-lg-flex list-unstyled w-100 pt-3 pb-2 gap-2  breadcrumbs mx-4">
 
         <li class="nav-item">
           <a href="index.html" class="nav-link">Home</a>
@@ -102,12 +123,6 @@
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link">Services</a>
-        </li>
-        <li class="nav-item">
-          <a href="about.html" class="nav-link">About</a>
-        </li>
-         <li class="nav-item">
-          <a href="contact.html" class="nav-link">Contact</a>
         </li>
         
       </ul>
