--- a/housing.html
+++ b/housing.html
@@ -152,7 +152,7 @@
               
               <div class="d-flex justify-content-center">
                 <div class="card card-housing" style="max-width: 350px;">
-                    <img src="Images/house.jpg" class="card-img-top" alt="House exterior">
+                    <img src="images/house.jpg" class="card-img-top" alt="House exterior">
                     <div class="card-body">
                     <h5 class="card-title">New homes daily.</h5>
                     <p class="card-text">Find your perfect home.</p>
@@ -163,7 +163,7 @@
 
               <div class="d-flex justify-content-center">
                 <div class="card card-housing" style="max-width: 350px;">
-                    <img src="Images/house1.jpg" class="card-img-top" alt="...">
+                    <img src="images/house1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Find your perfect rental.</h5>
                     <p class="card-text">Rent your new home today.</p>
@@ -174,7 +174,7 @@
 
               <div class="d-flex justify-content-center">
                 <div class="card card-housing" style="max-width: 350px;">
-                    <img src="Images/house4.jpg" class="card-img-top" alt="...">
+                    <img src="images/house4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">List your home for potential buyers.</h5>
                     <p class="card-text">sele your home to potential buyers.</p>
