--- a/swap.html
+++ b/swap.html
@@ -169,7 +169,7 @@
               <div class="d-flex justify-content-center">
                 <div class="card card-housing" style="max-width: 350px;">
 
-                    <img src="Images/swapImage2.png" class="card-img-top" alt="House exterior">
+                    <img src="images/swapImage2.png" class="card-img-top" alt="House exterior">
                     <div class="card-body">
                     <h5 class="card-title">Apply to unlock access.</h5>
                     <p class="card-text">Rented or owned, small or large - we’re looking for safe, well-cared-for homes occupied by people who love to travel.</p>
@@ -180,7 +180,7 @@
 
               <div class="d-flex justify-content-center">
                 <div class="card card-housing" style="max-width: 350px;">
-                    <img src="Images/swapimage3-8.png" class="card-img-top" alt="...">
+                    <img src="images/swapimage3-8.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Book available homes.</h5>
                     <p class="card-text">.No nightly fees. Just pay for cleaning + a small service fee per trip. New members can book up to 5 nights before they host.</p>
@@ -191,7 +191,7 @@
 
              <div class="d-flex justify-content-center">
                 <div class="card card-housing" style="max-width: 350px;">
-                    <img src="Images/swapimage4-8.png" class="card-img-top img-fluid" alt="...">
+                    <img src="images/swapimage4-8.png" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Host and earn travel credits.</h5>
                     <p class="card-text">Earn credits each time you host. You’ll meet and approve who stays in your home and Kindred will take care of the rest.</p>
