--- a/index.html
+++ b/index.html
@@ -186,78 +186,93 @@
           <section class="col-12 col-lg-7">
             <div class="row g-4 ">
               <div class="col-12 col-md-6 col-lg-4 max-card-width">
-                <div class="card border ">
-                  <div class="card-body">
-                    <h5 class="card-title">Community</h5>
-                    <img src="images/community.jpg" class="img-fluid rounded mb-2" alt="Community">
-                    <p> See what's happening around your neighborhood.</p>
-                  </div>
-                </div>
+                <a href="#" class="text-decoration-none text-dark">
+                  <div class="card border ">
+                    <div class="card-body">
+                      <h5 class="card-title">Community</h5>
+                      <img src="images/community.jpg" class="img-fluid rounded mb-2" alt="Community">
+                      <p> See what's happening around your neighborhood.</p>
+                    </div>
+                 </div>
+                </a>               
               </div>
               <div class="col-12 col-md-6 col-lg-4 max-card-width">
-                <div class="card border">
-                  <div class="card-body">
-                    <h5 class="card-title">Housing</h5>
-                    <img src="images/housing.jpg" class="img-fluid rounded mb-2" alt="Housing">
-                    <p> Looking for a place to live? You've come to the right place. </p>
+                <a href="housing.html" class="text-decoration-none text-dark">
+                  <div class="card border">
+                    <div class="card-body">
+                      <h5 class="card-title">Housing</h5>
+                      <img src="images/housing.jpg" class="img-fluid rounded mb-2" alt="Housing">
+                      <p> Looking for a place to live? You've come to the right place. </p>
+                    </div>
                   </div>
-                </div>
+                </a>  
               </div>
               <div class="col-12 col-md-6 col-lg-4 max-card-width">
-                <div class="card border">
-                  <div class="card-body">
-                    <h5 class="card-title">Jobs</h5>
-                    <img src="images/jobs.jpg" class="img-fluid rounded mb-2" alt="Jobs">
-                    <p> Find your dream job here. Many opportunities await you.</p>
+                <a href="#" class="text-decoration-none text-dark">
+                  <div class="card border">
+                    <div class="card-body">
+                      <h5 class="card-title">Jobs</h5>
+                      <img src="images/jobs.jpg" class="img-fluid rounded mb-2" alt="Jobs">
+                      <p> Find your dream job here. Many opportunities await you.</p>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>   
 
               <div class="col-12 col-md-6 col-lg-4 max-card-width">
-                <div class="card border">
-                  <div class="card-body">
-                    <h5 class="card-title">Services</h5>
-                    <img src="images/services.jpg" class="img-fluid rounded mb-2" alt="Services">
-                    <p> Need help with something? Check out the services offered by our community.</p>
-                  </div>
-                </div>
+                <a href="#" class="text-decoration-none text-dark">
+                  <div class="card border">
+                    <div class="card-body">
+                      <h5 class="card-title">Services</h5>
+                      <img src="images/services.jpg" class="img-fluid rounded mb-2" alt="Services">
+                      <p> Need help with something? Check out the services offered by our community.</p>
+                    </div>
+                  </div>               
+                </a>              
               </div> 
               <div class="col-12 col-md-6 col-lg-4 max-card-width">
-                <div class="card border">
-                  <div class="card-body">
-                    <h5 class="card-title">Sales</h5>
-                    <img src="images/sales.jpg" class="img-fluid rounded mb-2" alt="Sales">
-                    <p> Discover great deals on items for sale in your area. Find what you need at a price you love.</p>
+                <a href="#" class="text-decoration-none text-dark">
+                  <div class="card border">
+                    <div class="card-body">
+                      <h5 class="card-title">Sales</h5>
+                      <img src="images/sales.jpg" class="img-fluid rounded mb-2" alt="Sales">
+                      <p> Discover great deals on items for sale in your area. Find what you need at a price you love.</p>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div> 
               <div class="col-12 col-md-6 col-lg-4 max-card-width">
-                <div class="card border">
-                  <div class="card-body">
-                    <h5 class="card-title">Discussions</h5>
-                    <img src="images/discussions.jpg" class="img-fluid rounded mb-2" alt="Discussions">
-                    <p> Join the conversation! Engage with others in your community on various topics.</p>
-                  </div>
-                </div>
-              </div> 
- 
-              <div class="col-12 col-md-6 col-lg-4 max-card-width">
-                <div class="card border">
-                  <div class="card-body">
-                    <h5 class="card-title">Resume</h5>
-                    <img src="images/resume.jpg" class="img-fluid rounded mb-2" alt="Resume">
-                    <p> Create or update your resume to showcase your skills and experience. Get noticed by potential employers.</p>
-                  </div>
-                </div>
+                <a href="#" class="text-decoration-none text-dark">
+                  <div class="card border">
+                    <div class="card-body">
+                      <h5 class="card-title">Discussions</h5>
+                      <img src="images/discussions.jpg" class="img-fluid rounded mb-2" alt="Discussions">
+                      <p> Join the conversation! Engage with others in your community on various topics.</p>
+                    </div>
+                 </div>
+                </a>         
               </div> 
               <div class="col-12 col-md-6 col-lg-4 max-card-width">
-                <div class="card border">
-                  <div class="card-body">
-                    <h5 class="card-title">Gigs</h5>
-                    <img src="images/gigs.jpg" class="img-fluid rounded mb-2" alt="Gigs">
-                    <p>Whether you're looking for short-term work or freelance projects, find gigs that match your skills.</p>
+                <a href="#" class="text-decoration-none text-dark">
+                  <div class="card border">
+                    <div class="card-body">
+                      <h5 class="card-title">Resume</h5>
+                      <img src="images/resume.jpg" class="img-fluid rounded mb-2" alt="Resume">
+                      <p> Create or update your resume to showcase your skills and experience. Get noticed by potential employers.</p>
+                    </div>
                   </div>
-                </div>
+                </a>
+              </div> 
+              <div class="col-12 col-md-6 col-lg-4 max-card-width">
+                <a href="#" class="text-decoration-none text-dark">
+                  <div class="card border">
+                    <div class="card-body">
+                      <h5 class="card-title">Gigs</h5>
+                      <img src="images/gigs.jpg" class="img-fluid rounded mb-2" alt="Gigs">
+                      <p>Whether you're looking for short-term work or freelance projects, find gigs that match your skills.</p>
+                    </div>
+                  </div>
+                </a>
               </div> 
             </div>          
           </section>
