ingrid's updates and more

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
           </div>
 
           <!-- Nav Links -->
-          <ul class="navbar-nav ms-auto">
+          <ul id="top-bar-nav" class="navbar-nav ms-auto">
             <!--li class="nav-item me-2">
               <a href="#" class="btn btn-danger transparent-btn  text-dark px-5">POST</a>
             </li-->
@@ -103,7 +103,7 @@
     </div-->
           
     
-    <!---- Breadcrumbs -->
+    <!--Breadcrumbs-->
     <nav class="nav-breadcrumbs">
       <ul class="d-none d-lg-flex list-unstyled w-100 pt-3 pb-2 gap-2  breadcrumbs mx-4">
 
@@ -136,25 +136,25 @@
 
  <main class="container-fluid py-4">
 <div>
-  <h1 class="fs-1 text">About page</h1>
+  <h1 class="fs-1 text p-4">About page</h1>
 </div>
 
-<div class="container py-5">
-  <div class="row align-items-center">
-    <!-- GIF -->
-    <div class="col-12 col-md-4 text-center mb-4 mb-md-0">
-      <img src="images/ezgif.com-optimize.gif" class="img-fluid" style="max-width: 300px;" alt="Animated graphic">
+<section class="list-container p-3">
+  <div class="row">
+          <!--Gif-->
+    <div class="col-md-4 mb-3">
+      <img src="images/ezgif.com-optimize.gif" alt="Featured home" class="img-fluid img-thumbnail rounded w-100">
     </div>
 
-    <!-- Text -->
-    <div class="col-12 col-md-8 text-left text-md-start w-100 p-3">
-      <h2 class="display-5">The Human Connection</h2> <!-- FIXED: space after h2 -->
-      <p class="lead  w-100 p-3">
-        Etsy is the global marketplace for unique and creative goods. It’s home to a universe of special, extraordinary items, from unique handcrafted pieces to vintage treasures. In a time of increasing automation, it’s our mission to keep human connection at the heart of commerce. That’s why we built a place where creativity lives and thrives because it’s powered by people. We help our community of sellers turn their ideas into successful businesses. Our platform connects them with millions of buyers looking for an alternative—something special with a human touch, for those moments in life that deserve imagination. As a company, we strive to lead with our guiding principles and to help spread ideas of sustainability and responsibility whose impact can reach far beyond our own business.
+    <!-- Text column -->
+    <div class="col-md-8">
+     <h2 class="display-5">The Human Connection</h2> 
+      <p class="px-md-3">
+        Craigslist is the global marketplace for unique and creative goods. It’s home to a universe of special, extraordinary items, from unique handcrafted pieces to vintage treasures. In a time of increasing automation, it’s our mission to keep human connection at the heart of commerce. That’s why we built a place where creativity lives and thrives because it’s powered by people. We help our community of sellers turn their ideas into successful businesses. Our platform connects them with millions of buyers looking for an alternative—something special with a human touch, for those moments in life that deserve imagination. As a company, we strive to lead with our guiding principles and to help spread ideas of sustainability and responsibility whose impact can reach far beyond our own business.
       </p>
     </div>
-  </div>
-</div>
+
+
 
 
 <div class="text-center p-3 mb-2 bg-black text-white container-fluid my-12">
@@ -162,7 +162,7 @@
   <div class="row justify-content-left">
     <div class="col">
     <h2>How Craigslist Works</h2>
-      <p class="text-start">Our global marketplace is a vibrant community of real people connecting over special goods. The platform empowers sellers to do what they love and helps buyers find what they love.</p>
+      <p class="text-start p-4-2">Our global marketplace is a vibrant community of real people connecting over special goods. The platform empowers sellers to do what they love and helps buyers find what they love.</p>
   </div>
 </div>  
 </div>
@@ -184,6 +184,7 @@
   
 </div>
 </div>
+
 
 
 <div id="carouselExampleDark" class="carousel carousel-dark slide">
@@ -286,7 +287,7 @@
           <li><a href="#" class="footer-link">find/post jobs</a></li>
         </ul>
         <button class="btn btn-danger background-white mt-3 text-dark">Subscribe</button>
-        <h1 class="display-4 fw-bold mt-3 footer-link" >CL</h1>
+        <h1 class="display-4 fw-bold mt-3 footer-link gloock-regular" >CL</h1>
       </div>
 
     </div>
