--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
           </div>
 
           <!-- Nav Links -->
-          <ul class="navbar-nav ms-auto">
+          <ul id="top-bar-nav" class="navbar-nav ms-auto">
             <!--li class="nav-item me-2">
               <a href="#" class="btn btn-danger transparent-btn  text-dark px-5">POST</a>
             </li-->
             <li class="d-block d-lg-none nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="d-block d-lg-none nav-item">
               <a class="nav-link" href="#">Community</a>
@@ -370,7 +370,7 @@
               <li><a href="#" class="footer-link">find/post jobs</a></li>
             </ul>
             <button class="btn btn-danger background-white mt-3 text-dark">Subscribe</button>
-            <h1 class="display-4 fw-bold mt-3 footer-link" >CL</h1>
+            <h1 class="display-4 fw-bold mt-3 footer-link gloock-regular" >CL</h1>
           </div>
 
         </div>
