--- a/swap.html
+++ b/swap.html
@@ -9,10 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gloock&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon/site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/cfbe0d3908.js" crossorigin="anonymous" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
@@ -108,7 +104,7 @@
       <ul class="d-none d-lg-flex list-unstyled w-100 pt-3 pb-2 gap-2  breadcrumbs mx-4">
 
         <li class="nav-item">
-          <a href="index.html" class="nav-link">Home</a>
+          <a href="index.html" class="nav-link active">Home</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link">Community</a>
@@ -136,7 +132,7 @@
    
     <!--Main Page-->
      <main id="list-container">
-          <h1 class="fs-1 text">Swap housing page</h1>
+          <h1 class="fs-1 text p-4">Swap housing page</h1>
 
       <section class="list-container">
         <ul class="list-group swap-list">
@@ -167,7 +163,7 @@
           <div class="d-flex my-5 justify-content-center flex-wrap gap-3">
               
               <div class="d-flex justify-content-center">
-                <div class="card card-housing" style="max-width: 350px;">
+                <div class="card card-housing housing-card-max-width">
 
                     <img src="images/swapImage2.png" class="card-img-top" alt="House exterior">
                     <div class="card-body">
@@ -179,7 +175,7 @@
               </div>
 
               <div class="d-flex justify-content-center">
-                <div class="card card-housing" style="max-width: 350px;">
+                <div class="card card-housing housing-card-max-width">
                     <img src="images/swapimage3-8.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Book available homes.</h5>
@@ -190,7 +186,7 @@
               </div>
 
              <div class="d-flex justify-content-center">
-                <div class="card card-housing" style="max-width: 350px;">
+                <div class="card card-housing housing-card-max-width">
                     <img src="images/swapimage4-8.png" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Host and earn travel credits.</h5>
@@ -280,7 +276,7 @@
               <li><a href="#" class="footer-link">find/post jobs</a></li>
             </ul>
             <button class="btn btn-danger background-white mt-3 text-dark">Subscribe</button>
-            <h1 class="display-4 fw-bold mt-3 footer-link" >CL</h1>
+            <h1 class="display-4 fw-bold mt-3 footer-link gloock-regular">CL</h1>
           </div>
 
         </div>
