--- a/housing.html
+++ b/housing.html
@@ -9,10 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gloock&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon/site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/cfbe0d3908.js" crossorigin="anonymous" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
@@ -49,7 +45,7 @@
           </div>
 
           <!-- Nav Links -->
-          <ul class="navbar-nav ms-auto">
+          <ul id="top-bar-nav" class="navbar-nav ms-auto">
             <!--li class="nav-item me-2">
               <a href="#" class="btn btn-danger transparent-btn  text-dark px-5">POST</a>
             </li-->
@@ -66,7 +62,7 @@
               <a class="nav-link" href="#">Gigs</a>
             </li>
             <li class="d-block d-lg-none nav-item">
-              <a class="nav-link" href="housing.html">Housing</a>
+              <a class="nav-link active" href="housing.html">Housing</a>
             </li>
             <li class="d-block d-lg-none nav-item">
               <a class="nav-link" href="#">Jobs</a>
@@ -136,7 +132,7 @@
  
     <!--Main Page-->
      <main id="homePage">
-       <div><h1 class="fs-1 text">Housing page</h1></div>
+       <div><h1 class="fs-1 text p-4">Housing page</h1></div>
       <section class="list-container">
         <ul class="list-group">
           <li class="list-group-item"><a href="swap.html" class="nav-link">housing swap</a></li>
@@ -151,7 +147,7 @@
           <div class="d-flex my-5 justify-content-center flex-wrap gap-3">
               
               <div class="d-flex justify-content-center">
-                <div class="card card-housing" style="max-width: 350px;">
+                <div class="card card-housing housing-card-max-width">
                     <img src="images/house.jpg" class="card-img-top" alt="House exterior">
                     <div class="card-body">
                     <h5 class="card-title">New homes daily.</h5>
@@ -162,7 +158,7 @@
               </div>
 
               <div class="d-flex justify-content-center">
-                <div class="card card-housing" style="max-width: 350px;">
+                <div class="card card-housing housing-card-max-width">
                     <img src="images/house1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Find your perfect rental.</h5>
@@ -173,7 +169,7 @@
               </div>
 
               <div class="d-flex justify-content-center">
-                <div class="card card-housing" style="max-width: 350px;">
+                <div class="card card-housing housing-card-max-width">
                     <img src="images/house4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">List your home for potential buyers.</h5>
@@ -261,7 +257,7 @@
               <li><a href="#" class="footer-link">find/post jobs</a></li>
             </ul>
             <button class="btn btn-danger background-white mt-3 text-dark">Subscribe</button>
-            <h1 class="display-4 fw-bold mt-3 footer-link" >CL</h1>
+            <h1 class="display-4 fw-bold mt-3 footer-link gloock-regular" >CL</h1>
           </div>
 
         </div>
