--- a/about.html
+++ b/about.html
@@ -206,14 +206,14 @@
         <img src="images/Artboard3.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-md-block">
           <h5>Is craigslist Hiring?</h5>
-          <p>Yes! Visit our careers page to see our open roles and to learn what it’s like to be a part of the Etsy team.</p>
+          <p>Yes! Visit our careers page to see our open roles and to learn what it’s like to be a part of the Craigslist team.</p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
         <img src="images/Artboard2.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-md-block">
           <h5>I'm ready to shop. Where do I begin?</h5>
-          <p>Visit craigslist.com to start exploring. If you’re looking for something specific, search away, or find inspiration through The Etsy Journal. You can join the Etsy community by registering for an account.</p>
+          <p>Visit craigslist.com to start exploring. If you’re looking for something specific, search away, or find inspiration through The Craigslist Journal. You can join the Etsy community by registering for an account.</p>
         </div>
       </div>
     
@@ -221,7 +221,7 @@
         <img src="images/Artboard1.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-md-block">
           <h5>How do I become an Craigslist Seller?</h5>
-          <p>If you want to sell your handmade, vintage or craft items on craigslist, check that they fit within our Seller Policy. Then, visit etsy.com/sell to set up your shop. It only takes 20 cents and your imagination to set up a global business.</p>
+          <p>If you want to sell your handmade, vintage or craft items on craigslist, check that they fit within our Seller Policy. Then, visit craigslist.com/sell to set up your shop. It only takes 20 cents and your imagination to set up a global business.</p>
       </div>
       </div>
    
