--- a/swap.html
+++ b/swap.html
@@ -179,7 +179,7 @@
                     <img src="images/swapimage3-8.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Book available homes.</h5>
-                    <p class="card-text">.No nightly fees. Just pay for cleaning + a small service fee per trip. New members can book up to 5 nights before they host.</p>
+                    <p class="card-text">No nightly fees. Just pay for cleaning + a small service fee per trip. New members can book up to 5 nights before they host.</p>
                     <button class="btn btn-danger background-white mt-3 text-dark">Go somewhere</button>
                     </div>
                 </div>
