--- a/about.html
+++ b/about.html
@@ -213,7 +213,7 @@
         <img src="images/Artboard2.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-md-block">
           <h5>I'm ready to shop. Where do I begin?</h5>
-          <p>Visit craigslist.com to start exploring. If you’re looking for something specific, search away, or find inspiration through The Craigslist Journal. You can join the Etsy community by registering for an account.</p>
+          <p>Visit craigslist.com to start exploring. If you’re looking for something specific, search away, or find inspiration through The Craigslist Journal. You can join the Craigslist community by registering for an account.</p>
         </div>
       </div>
     
