--- a/housing.html
+++ b/housing.html
@@ -131,7 +131,7 @@
 
  
     <!--Main Page-->
-     <main id="homePage">
+     <main>
        <div><h1 class="fs-1 text p-4">Housing page</h1></div>
       <section class="list-container">
         <ul class="list-group">
@@ -257,7 +257,7 @@
               <li><a href="#" class="footer-link">find/post jobs</a></li>
             </ul>
             <button class="btn btn-danger background-white mt-3 text-dark">Subscribe</button>
-            <h1 class="display-4 fw-bold mt-3 footer-link gloock-regular" >CL</h1>
+            <h1 class="display-1 fw-bold mt-3 footer-link gloock-regular" >CL</h1>
           </div>
 
         </div>
